# external_gripper_example

./: README.md
icra19/: CMakeLists.txt  package.xml
icra19/config/: pick_and_place.yaml
icra19/description/: panda_robotiq.urdf.xacro  panda_robotiq_connection.xacro  panda_robotiq_connector_macro.xacro
icra19/launch/: demo.launch  panda_robotiq.rviz  test.launch  test2.launch
icra19/scripts/: demo.py
panda_with_robotiq_gripper_example/: CMakeLists.txt  package.xml
panda_with_robotiq_gripper_example/config/: endeffector-config.json  pick_and_place.yaml
panda_with_robotiq_gripper_example/launch/: panda_robotiq.rviz  panda_with_robotiq_gripper_example.launch
panda_with_robotiq_gripper_example/robots/: panda_robotiq.urdf.xacro  panda_robotiq_connector_joint.xacro  robotiq_mounted_on_panda.urdf.xacro
panda_with_robotiq_gripper_example/scripts/: panda_with_robotiq_gripper_example.py
