<?xml version="1.0"?>
<package format="2">
  <name>panda_with_robotiq_gripper_example</name>
  <version>0.0.0</version>
  <description>Demo code for ICRA 2019 showcasing the usage of a Robotiq gripper with Panda robot</description>

  <maintainer email="nicolas.neuburger@franka.de">Nicolas Neuburger</maintainer>
  <maintainer email="christoph.jaehne@franka.de">Christoph Jaehne</maintainer>

  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>rospy</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_gripper</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>robotiq_2f_gripper_control</exec_depend>
  <exec_depend>robotiq_2f_gripper_msgs></exec_depend>

</package>
