<?xml version="1.0"?>
<package format="2">
  <name>panda_with_robotiq_gripper_example</name>
  <version>0.0.0</version>
  <description>Demo code showcasing the usage of a Robotiq gripper with a Panda robot.</description>

  <maintainer email="nicolas.neuburger@franka.de">Nicolas Neuburger</maintainer>
  <maintainer email="christoph.jaehne@franka.de">Christoph Jaehne</maintainer>

  <license>UNLICENSED</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>controller_manager_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>franka_control</depend>
  <depend>franka_description</depend>
  <depend>panda_moveit_config</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>robotiq_2f_gripper_msgs</depend>
  <depend>rosparam</depend>

  <exec_depend>rospkg</exec_depend>

</package>
